css/top.css
/* ... */
#top .case .tab-menu .tab {width: calc((100%)/4); border-right: 1px solid #998675; border-bottom: 1px solid #998675; color: #998675; height: 80px; display: flex; justify-content: center; align-items: center; font-size: 20px; cursor: pointer;}
#top .case .tab-menu .tab:nth-child(1) {border-left: 1px solid #998675;}
#top .case .tab-menu .tab:nth-child(5n) {border-left: 1px solid #998675;}
#top .case .tab-menu .tab.is-active {background: #998675; color: #fff;}
#top .case .list {display: flex; flex-direction: column; margin-top: 64px; gap: 70px;}
#top .case .box {display: flex; align-items: flex-start;}
#top .case .box img {max-width: 320px; margin-right: 38px;}
#top .case .box .text {display: flex; flex-direction: column;}
#top .case .box h3 {font-size: 30px; font-weight: bold;}
#top .case .box p {margin-top: 11px; font-size: 24px; line-height: 2;}
#top .case .box .text .more {align-self: center; display: inline-flex; justify-content: center; align-items: center; min-width: 300px; height: 60px; border-radius: 9999px; border: 1px solid #998675; color: #998675; position: relative; margin-top: 38px; padding: 0 50px;}
#top .case .box .text .more:after {content: ""; width: 8px; height: 12px; background-image: url('../img/top/article-link_arrow.svg'); background-size: cover; position: absolute; right: 18px; top: 0; bottom: 0; margin: auto;}
#top .case .link {display: flex; justify-content: center; margin-top: 85px;}
#top .case .link .cmn-button {max-width: 100%; min-width: 600px; width: auto; display: inline-flex; padding: 0 60px;}
#top .case .no-article {font-size: 24px; text-align: center;}

@media screen and (max-width: 1199px) {
  #top .case {padding: 8rem 0 11.2rem;}
  #top .case .top-text {font-size: 4rem;}
  #top .case .tab-menu {border: 1px solid #998675; border-bottom: 0; border-right: 0; margin-top: 15.6rem;}
  #top .case .tab-menu .tab {width: calc((100%)/2); height: 12rem; border: 0; border-bottom: 1px solid #998675; border-right: 1px solid #998675; text-align: center; font-size: 3.2rem; font-weight: bold;}
  #top .case .tab-menu .tab:nth-child(1) {border-left: 0;}
  #top .case .tab-menu .tab:nth-child(5n) {border-left: 0;}
  #top .case .list {gap: 11.2rem;}
  #top .case .box {flex-direction: column;}
  #top .case .box a {width: 100%;}
  #top .case .box img {max-width: 100%; width: 100%; margin-right: 0;}
  #top .case .box h3 {font-size: 4.8rem; margin-top: 2.2rem;}
  #top .case .box p {font-size: 4rem; margin-top: 2.6rem;}
  #top .case .box .text .more {display: flex !important; margin-left: auto !important; margin-right: auto !important; margin-top: 7rem; width: 50rem !important; max-width: calc(100% - 4rem) !important; height: 10rem; font-size: 3.6rem;}
  #top .case .box .text .more:after {width: 1.4rem; height: 2.2rem;}
  #top .case .link {margin-top: 11.2rem;}
  #top .case .link .cmn-button {min-width: 72rem; height: 12rem;}
}

/* =================================================================
faq
=================================================================*/
#top .faq {background: #F2F2F2; padding: 85px 0 100px;}
#top .faq .list {margin-top: 45px; display: flex; flex-wrap: wrap; gap: 70px 50px;}
#top .faq .list .item {width: calc((100% - 70px)/2); background: #fff; border-radius: 20px; overflow: hidden; font-size: 24px; display: flex; align-items: center; gap: 40px; position: relative;}
#top .faq .list .item:after {content: ""; width: 13px; height: 21px; background-image: url('../img/top/article-link_arrow.svg'); background-size: cover; position: absolute; right: 20px; top: 0; bottom: 0; margin: auto;}
#top .faq .list .item img {height: 160px; width: auto;}

@media screen and (max-width: 1199px) {
  #top .faq {padding: 5.2rem 0 10rem;}
  #top .faq .list {margin-top: 10rem; gap: 4rem 0px;}
  #top .faq .list .item {width: 100%; gap: 4rem; font-size: 3.6rem; font-weight: bold;}
  #top .faq .list .item img {width: 22.4rem; height: 22.4rem;}
  #top .faq .list .item:after {width: 1.7rem; height: 2.8rem;}
}

